@@ -1,11 +1,11 @@
 
 
 
-context("Date Conversion Testing")
+context("Date/Time Conversions")
 
 
 
-test_that("convert to datetime", {
+test_that("convert to date", {
  
   dates <- as.Date("2015-02-07")  + -10:10
   origin <- 25569L
@@ -17,4 +17,21 @@ test_that("convert to datetime", {
 
 
 
-
+test_that("convert to datetime", {
+  
+  
+  x <- 43037 + 2 / 1440
+  expect_equal(object = convertToDateTime(x), expected = as.POSIXct("2017-10-29 00:02:00 CDT"))
+  
+  x <- 43037 + 2/1440 + 1/86400
+  expect_equal(object = convertToDateTime(x), expected = as.POSIXct("2017-10-29 00:02:01 CDT"))
+  
+  x <- 43037 + 2.50 / 1440
+  expect_equal(object = convertToDateTime(x), expected = as.POSIXct("2017-10-29 00:02:30 CDT"))
+  
+  x <- 43037 + 2/1440 + 12.12/86400
+  expect_equal(object = convertToDateTime(x), expected = structure(1509195732.12, class = c("POSIXct", "POSIXt")))
+  
+  
+  
+})
