@@ -23,6 +23,9 @@ BUG FIXES
 
 * deleted table re-appearing after save & load.
 
+* newline characters in table names would corrupt file
+
+* datetime precision
 
 
 
